# Projet-Chatbot-L3-Unistra

./: CMakeLists.txt  README.md
doc/: rapport.md
src/: Chatbot.cpp  Chatbot.hpp  Devinette.cpp  Devinette.hpp  main.cpp
tests/: test1.cpp  test2.cpp
